# concordium-wallet-crypto-swift

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Package.swift  README.md  build.rs  build.sh
.github/workflows/: lint+test.yml  publish-bindings.yml  publish-framework.yml  publish-release.yml
Sources/ConcordiumWalletCrypto/: .gitignore  ConcordiumWalletCrypto.swift  crypto.swift  generated.swift
Tests/ConcordiumWalletCryptoTests/: ConcordiumWalletCryptoTests.swift
src/: anchors.rs  creds.rs  encrypted_amounts.rs  helpers.rs  id_proofs.rs  lib.rs  lib.udl  presentation.rs  schema.rs  transactions.rs  types.rs  web3id.rs
tests/: lib_test.rs
