[package]
name = "concordium-wallet-crypto-uniffi"
version = "4.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
uniffi = { version = "0.26", features = ["cli"] }
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"
hex = { version = "0.4.3", features = ["serde"] }
derive_more = "0.99.18"

[dependencies.concordium_base]
path = "./concordium-base/rust-src/concordium_base"

[dependencies.wallet_library]
path = "./concordium-base/rust-src/wallet_library"

[build-dependencies]
uniffi = { version = "0.26", features = ["build"] }

[build-dependencies.concordium_base]
path = "./concordium-base/rust-src/concordium_base"

[lib]
crate-type = ["staticlib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
